fix SonarQube issues #2